<resources>
    <string name="app_name">Fitness Socium</string>

    <string name="title_activity_menu">MainActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_diet">Diet</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_foodcategories">Categories</string>
    <string name="title_training">Training</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_categories">Categories</string>

    <!-- FACEBOOK AUTH -->
    <string name="facebook_app_id">2531795773784294</string>
    <string name="fb_login_protocol_scheme">fb2531795773784294</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Daily Tip/Recommendation -->
    <string name="daily_tip_last_prompt">daily_tip_last_prompt</string>
    <string name="daily_tip_title">Daily Tip</string>
    <string name="daily_tip_buttonText">Dismiss</string>
    <string-array name="daily_tip_array">
        <item>Do a drop set on your final exercise today</item>
        <item>Extend cardio by 10 minutes</item>
        <item>Go for a new max on your favourite exercise for today</item>
        <item>Water improves your training</item>
        <item>Remember to get enough sleep</item>
        <item>Keep a check on your daily protein intake</item>
        <item>Most importantly is the form, don\'t put to much weight on</item>
        <item>Make goals that are achievable</item>
    </string-array>

    <string-array name="spinnerItems">
        <item>Select an option ...</item>
        <item>Progression</item>
    </string-array>


    <!-- SharedPreferences -->
    <string name="usergoal_weight">usergoal_weight</string>
    <string name="usergoal_fat">usergoal_fat</string>
    <string name="progression_weight_y">progression_weight_y</string>
    <string name="progression_weight_x">progression_weight_x</string>
    <string name="progression_fat_y">progression_fat_y</string>
    <string name="progression_fat_x">progression_fat_x</string>
    <string name="setting_daily_tip">setting_daily_tip</string>

    <string name="adMobTestId">ca-app-pub-3940256099942544/6300978111</string>

</resources>
