<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="studios.kundby.fitnessapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_diet"
        android:name="studios.kundby.fitnessapp.ui.diet.DietFragment"
        android:label="@string/title_diet"
        tools:layout="@layout/fragment_diet" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="studios.kundby.fitnessapp.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_foodcategories"
        android:name="studios.kundby.fitnessapp.ui.recipes.FoodCategoriesFragment"
        android:label="@string/title_foodcategories"
        tools:layout="@layout/fragment_foodcategories">
        <action
            android:id="@+id/action_navigation_foodcategories_to_navigation_recipes"
            app:destination="@id/navigation_recipes" />
    </fragment>

    <fragment
        android:id="@+id/navigation_training"
        android:name="studios.kundby.fitnessapp.ui.training.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="studios.kundby.fitnessapp.ui.exercises.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_navigation_categories_to_navigation_exercises"
            app:destination="@id/navigation_exercises" />
    </fragment>

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="studios.kundby.fitnessapp.ui.exercises.ExercisesFragment"
        android:label="@string/title_exercises"
        tools:layout="@layout/fragment_exercises" />

</navigation>